Fix errors in list

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <ul class="list-group-inline">
-    <li class="center=text">
+    <li class="center-text">
       <a class="block" href="#">
         <i class="icon i-96">
           <svg><use xlink:href="images/dino-icons.svg#brachiosaurus" /></svg>
@@ -19,7 +19,7 @@
         <span class="block icon-text">Brachiosaurus</span>
       </a>
     </li>
-    <li class="center=text">
+    <li class="center-text">
       <a class="block" href="#">
         <i class="icon i-96">
           <svg><use xlink:href="images/dino-icons.svg#micropachycephalosaurus" /></svg>
@@ -27,7 +27,7 @@
         <span class="block icon-text">Micropachycephalosaurus</span>
       </a>
     </li>
-    <li class="center=text">
+    <li class="center-text">
       <a class="block" href="#">
         <i class="icon i-96">
           <svg><use xlink:href="images/dino-icons.svg#velociraptor" /></svg>
